# inletshopapi

./: .gitignore  Cargo.toml  README.md  redoc-static.html
.config/: config.toml
docs/: openapi.yaml  redoc-static.html  redocly.yaml
docs/components/: .security.yaml.swp  errorContent.yaml  publicData.yaml  security.yaml  vendor.yaml
docs/components/responses/: 400.yaml  401.yaml  403.yaml  404.yaml  500.yaml
docs/components/schemas/: hours.yaml  price.yaml  product.yaml  publicData.yaml  vendor.yaml
docs/paths/: .vendor.yaml.swp  vendor.yaml
docs/paths/product/: create.yaml  delete.yaml  getVendorProducts.yaml
docs/paths/user/products/: get_one.yaml
docs/paths/user/vendors/: get_many.yaml  get_one.yaml
docs/paths/user/vendors/products/: get_many.yaml
src/: .app_error.rs.swp  .auth.rs.swp  .main.rs.swp  app_error.rs  auth.rs  main.rs
src/controllers/: .user.rs.swp  mod.rs  other.rs  user.rs  vendor.rs
src/controllers/product/: create.rs  create2.rs  delete.rs  mod.rs  vendor_products.rs
src/controllers/user/: mod.rs
src/controllers/user/products/: get_one.rs  mod.rs
src/controllers/user/vendors/: get_many.rs  get_one.rs  mod.rs
src/controllers/user/vendors/products/: get_many.rs  (+1 more)
src/dto/: mod.rs  price.rs  product.rs  short_product.rs  user.rs  vendor.rs
src/emails/: mod.rs  reset_password.rs
src/helpers/: delete_files.rs  mod.rs  process_images.rs  results_per_page.rs  shrink_and_write_image.rs
src/models/: mod.rs  product.rs  vendor.rs
src/routes/: mod.rs  other.rs  product.rs  user.rs  vendor.rs
tests/routes/: vendor.rs
