[package]
name = "inlet_shop_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
argon2 = "0.5.3"
futures = "0.3.31"
futures-util = "0.3.31"
libvips = "1.7.1"
mongodb = "3.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = "1.18.1"
