[package]
name = "inlet_shop_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
argon2 = "0.5.3"
futures = "0.3.31"
futures-util = "0.3.31"
mongodb = "3.3.0"
once_cell = "1.21.3"
reqwest = { version="0.12.24", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
uuid = "1.18.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
rpath = false
overflow-checks = false
